update relatorios pra cobrir kpi's e estoque minimo pra produto
